[package]
edition = "2021"
name = "shaman"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[dependencies]
dashmap = "5"
fehler = "1"
libc = "0.2"
log = "0.4"
mio = {version = "0.8", features = ["net", "os-ext"]}
mio-misc = "2"
parking_lot = "0.12"
sendfd = "0.4"
serde = {version = "1", features = ["derive"]}
shmem-ipc = {git = "https://github.com/dovahcrow/shmem-ipc", rev = "ea76ea88"}
# shmem-ipc = {path = "../shmem-ipc"}
thiserror = "1"

tokio = {version = "1", optional = true, features = ["time", "net", "macros"]}

[dev-dependencies]
anyhow = "1"
bincode = "1"
env_logger = "0.9"
tokio = {version = "1", features = ["rt-multi-thread"]}
